--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=CryptoWatcher
+spring.application.name=CryptoFolio
 spring.datasource.url=jdbc:postgresql://localhost:5432/crypto_db
 spring.datasource.username=
 spring.datasource.password=
